fix z-index. restore slideinfromright

--- a/assets/scss/mobile/_layouts.scss
+++ b/assets/scss/mobile/_layouts.scss
@@ -20,7 +20,10 @@ body {
 .view {
 	position: absolute;
 	top: 0;
-	@include size(100%, 100%);
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 0;
 	padding: $navbarHeight 0 0 0;
 	margin: 0;
 	overflow: hidden;
@@ -29,7 +32,6 @@ body {
 		@include size(100%, 100%);
 		background-color: $bodyBackground;
 		position: relative;
-		//z-index: 0;
 		&.rendering::after {
 		    content: "";
 		    position: absolute;
@@ -38,16 +40,20 @@ body {
 		}
 		//@include transition(all $pageSwitchDuration ease-in-out);
 		@include backface-visibility(hidden);
-		@include animation(fadein $pageSwitchDuration ease-in-out);
+		//@include animation(fadein $pageSwitchDuration ease-in-out);
+		@include translate3d(0, 0, 0);
+		@include animation(slideinfromright $pageSwitchDuration ease-in-out);
 	}
 }
 
 .view.view-hidden {
 	pointer-events: none;
 	& > .wrapper {
-		opacity: 0;
+		//opacity: 0;
 		visibility: hidden;
-		@include animation(fadeout $pageSwitchDuration ease-in-out);
+		//@include animation(fadeout $pageSwitchDuration ease-in-out);
+		@include translate3d(100%, 0, 0);
+		@include animation(slideouttoleft $pageSwitchDuration ease-in-out);
 	}
 }
 
